<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drive_mate"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24sp"
        android:gravity="center" />

    <EditText
        android:id="@+id/etPickupLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pickup_location_e_g_los_angeles_ca"
        android:inputType="text"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etDropoffLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/drop_off_location_optional_e_g_sfo"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etPickupLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etPickupDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pickup_date_yyyy_mm_dd"
        android:focusable="false"
        android:inputType="none"
        android:clickable="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etDropoffLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etDropoffDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/drop_off_date_yyyy_mm_dd"
        android:focusable="false"
        android:inputType="none"
        android:clickable="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etPickupDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSearchKayak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search_on_kayak"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etDropoffDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
